mcalazans/iluvatar-soundtrack/vpc.tf
###
### VPC
###
resource "aws_vpc" "main_vpc" {
  cidr_block = "${var.vpc_cidr}"
  instance_tenancy = "default"
  enable_dns_support = true
  enable_dns_hostnames = true
  tags = {
    Name = "${var.vpc_name}"
  }
}
